k8s-config/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flask-api-yien-liu
  annotations:
    #kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   rewrite ^/stylesheets/(.*)$ /app/stylesheets/$1 redirect;  # 添加 /app 前缀
    #   rewrite ^/images/(.*)$ /app/images/$1 redirect;  # 添加 /app 前缀
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: flask-api-yien-liu.dev.ews.en.internal
      http:
        paths:
          - path: /
            backend:
              serviceName: flask-api-yien-liu
              servicePort: 3000
